--- a/resources/mapreduce-design-patterns/pom.xml
+++ b/resources/mapreduce-design-patterns/pom.xml
@@ -24,6 +24,24 @@
             <version>2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>3.3.6</version> <!-- Replace with the version you're using -->
+        </dependency>
+
         <!-- Hadoop Common -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
