--- a/hadoop-spark-dockercompose/docker-compose.yaml
+++ b/hadoop-spark-dockercompose/docker-compose.yaml
@@ -1,90 +1,88 @@
-version: '2'
+version: "3"
+
 services:
   namenode:
     image: ramilu90/hadoop-namenode
     container_name: namenode
     platform: linux/amd64
+    restart: always
+    ports:
+      - 9870:9870
+      - 9010:9000
     volumes:
-      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-pig-dockercompose/friends-mapreduce.txt:/opt/friends-mapreduce.txt
+      # - hadoop_namenode:/hadoop/dfs/name
       - /Users/ramindu/iit/lecture4/mapreduce-design-intro/resources:/opt/hadoop/resources
+      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/resources/:/opt/resources
     environment:
       - CLUSTER_NAME=test
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
     env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 50070:50070
+      - ./hadoop.env
 
   datanode:
     image: ramilu90/hadoop-datanode
-    platform: linux/amd64
     container_name: datanode
-    depends_on: 
-      - namenode
-    env_file:
-      - ./hadoop-hive.env
+    platform: linux/amd64
+    restart: always
+    # volumes:
+      # - hadoop_datanode:/hadoop/dfs/data
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870"
+      CORE_CONF_fs_defaultFS: hdfs://namenode:9000
     ports:
-      - 50075:50075
+      - "9864:9864"
+    env_file:
+      - ./hadoop.env
 
   resourcemanager:
     image: ramilu90/hadoop-datanode
-    platform: linux/amd64
-    hostname: resourcemanager
     container_name: resourcemanager
-    command: [ "yarn", "resourcemanager" ]
-    depends_on:
-      - namenode
-      - datanode
-    ports:
-      - 8088:8088
-    env_file:
-      - ./hadoop-hive.env
-    volumes:
-      - ./test.sh:/opt/test.sh
-  nodemanager:
-    image: ramilu90/hadoop-datanode
     platform: linux/amd64
-    container_name: nodemanager
-    command: [ "yarn", "nodemanager" ]
+    restart: always
+    environment:
+      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
     env_file:
-      - ./hadoop-hive.env
+      - ./hadoop.env
 
+  nodemanager1:
+    image: ramilu90/hadoop-datanode
+    container_name: nodemanager
+    platform: linux/amd64
+    restart: always
+    environment:
+      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
+    env_file:
+      - ./hadoop.env
 
   spark-master:
     image: ramilu90/spark-master
     container_name: spark-master
     platform: linux/amd64
-    environment:
-      - HADOOP_CONF_DIR=/etc/hadoop/conf
-    ports:
-      - 8080:8080
-      - 7077:7077
-    env_file:
-      - ./hadoop-hive.env
     volumes:
-      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/hadoop_conf:/etc/hadoop/conf 
-  spark-worker:
+      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/resources/:/opt/resources
+    depends_on:
+      - namenode
+      - datanode
+    ports:
+      - "8080:8080"
+      - "7077:7077"
+    environment:
+      - INIT_DAEMON_STEP=setup_spark
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+
+  spark-worker-1:
     image: ramilu90/spark-worker
+    container_name: spark-worker-1
     platform: linux/amd64
     depends_on:
       - spark-master
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
-      - HADOOP_CONF_DIR=/etc/hadoop/conf
     ports:
       - "8081:8081"
-    env_file:
-      - ./hadoop-hive.env
-    volumes:
-      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/hadoop_conf:/etc/hadoop/conf 
-  spark-notebook:
-    image: ramilu90/spark-notebook
-    platform: linux/amd64
-    container_name: spark-notebook
     environment:
-      - HADOOP_CONF_DIR=/etc/hadoop/conf
-    env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 9001:9001
-    volumes:
-      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/hadoop_conf:/etc/hadoop/conf 
+      - "SPARK_MASTER=spark://spark-master:7077"
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+
+# volumes:
+#   hadoop_namenode:
+#   hadoop_datanode:
+
