--- a/hadoop-spark-dockercompose/docker-compose.yaml
+++ b/hadoop-spark-dockercompose/docker-compose.yaml
@@ -55,11 +55,11 @@ services:
       - ./hadoop.env
 
   spark-master:
-    image: ramilu90/spark:latest
+    image: ramilu90/spark-master
     container_name: spark-master
+    platform: linux/amd64
     volumes:
       - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/resources/:/opt/resources
-      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-spark-dockercompose/resources_MLLib/:/opt/resources_MLLib
     depends_on:
       - namenode
       - datanode
@@ -68,12 +68,12 @@ services:
       - "7077:7077"
     environment:
       - INIT_DAEMON_STEP=setup_spark
-      - SPARK_MODE=master
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
-    # entrypoint: ["/bin/bash", "/opt/resources_MLLib/init_commands.sh"]
+
   spark-worker-1:
-    image: ramilu90/spark:latest
+    image: ramilu90/spark-worker
     container_name: spark-worker-1
+    platform: linux/amd64
     depends_on:
       - spark-master
     ports:
@@ -81,9 +81,7 @@ services:
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
-      - SPARK_MODE=worker
 
 # volumes:
 #   hadoop_namenode:
 #   hadoop_datanode:
-
